<resources>
    <string name="app_name">Quick solve! Yojijukugo 7000</string>

    <!--共通-->
    <string name="delimiter">\@</string>
    <string name="key_save">key_save</string>
    <string name="key_match_pattern">key_match_pattern</string>
    <string name="find_meaning">Check meaning</string>
    <string name="confirm_whether_to_check_meaning">Do you examine the meaning of this four-character idiom?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copied">%1$s copied to clipboard</string>

    <!--テスト文字列-->
    <string name="idiom_name_test">情状酌量</string>
    <string name="idiom_read_test">じょうじょうしゃくりょう</string>
    <string name="view_count_test">View count : 2 times</string>
    <string name="last_view_day_test">last : 2017/10/28</string>

    <!--ListView表示文字列-->
    <string name="check_count">View count : %1$d times</string>
    <string name="last_check_day">last : %1$s</string>

    <!--MainActivity-->
    <string name="search_title">Please enter the letters included</string>
    <string name="search_hint">Search character input</string>
    <string name="other_apps_link1">After learn a lot of idioms and let\'s enjoy yourself with this app (tap to icon) to check your skills!</string>
    <string name="click">Click</string>
    <string name="version">Ver.%1$s</string>


    <string-array name="match_pattern">
        <item>Forward match</item>
        <item>Partial Match</item>
        <item>Backward match</item>
    </string-array>

    <string name="switch_forward">Forward match</string>
    <string name="switch_partial">Partial Match</string>
    <string name="switch_backward">Backward match</string>

    <string name="search_count">%1$d item</string>

    <!--メニュータイトル-->
    <string name="menu_favorite">Favorite</string>
    <string name="menu_history">History</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_close">Close</string>

    <!--メイン画面で戻るボタンを押下したときのメッセージ-->
    <string name="final_title">Exit menu</string>
    <string name="final_message">Do you want to exit the application?</string>
    <string name="final_ok">Exit</string>
    <string name="final_cancel">Cancel</string>

    <!--HistoryActivity-->
    <string name="history_description">History of list of idiom that you have studied</string>
    <string name="check_all">Select all</string>
    <string name="uncheck_all">Deselect all</string>
    <string name="delete_history">Delete from history</string>
    <string name="title_delete_history">Delete history</string>
    <string name="confirm_whether_to_delete_history">Would you like to delete the checked history?</string>

    <string-array name="history_sort_pattern">
        <item>Descending order by date</item>
        <item>Ascending order by date</item>
        <item>Ascending order by keyword</item>
        <item>Descending order by keyword</item>
    </string-array>

    <!--FavoriteActivity-->
    <string name="favorite_description">My favorite list</string>

    <!--WedBrowserActivity-->
    <string name="look_answer">Confirm meaning</string>

    <string name="search_description">Search on the Web</string>
    <string name="search_word">%1$s+meaning</string>

    <!--ca-app-pub-1485554329820885~1731985973-->
    <string name="adUnitId">ca-app-pub-1485554329820885/2989351030</string>
    <string name="adUnitInterId">ca-app-pub-1485554329820885/1181445346</string>
    <string name="adUnitTestId">ca-app-pub-3940256099942544/6300978111</string>
</resources>
