<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_delete_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start"
                android:text="@string/check_all"/>

            <!--Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:entries="@array/history_sort_pattern"/-->

            <TextView
                android:id="@+id/history_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/search_count"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="2">

            <Button
                android:id="@+id/delete_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:drawableTop="@drawable/ic_delete_sweep_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/delete_history"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adUnitId="@string/adUnitId"
                ads:adSize="BANNER" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>