<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp"
    android:background="#00000000"
    android:descendantFocusability="blocksDescendants">

    <!--CheckBox
        android:id="@+id/check_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_weight="1"
        android:layout_gravity="center"/-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idiom_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_weight="6"
                android:gravity="start"
                android:text="@string/idiom_name_test"/>

            <TextView
                android:id="@+id/view_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="end"
                android:text="@string/view_count_test"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idiom_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_weight="6"
                android:gravity="start"
                android:text="@string/idiom_read_test"/>

            <TextView
                android:id="@+id/last_view_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="end"
                android:text="@string/last_view_day_test"/>
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/check_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="2dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        style="@style/HartCheckBox" />

</LinearLayout>